<resources>
    <string name="app_name">myblog</string>
    <string name="email_address">Email address</string>
    <string name="remember_me">Remember Me</string>
    <string name="password">Password</string>
    <string name="don_t_remember_password">Don\'t Remember Password?</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="don_t_have_an_account_click_here_to_sign_up">Don\'t have an account? Click here to sign up.</string>
    <string name="logo">logo</string>
    <string name="register_now">Register Now</string>
    <string name="i_accept_terms_and_conditions">I accept terms and conditions</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="already_have_an_account_click_here_to_sign_in">Already have an account? Click here to sign in</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="name">Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
</resources>
